# MacDeploy

./: .gitignore  CMakeLists.txt  ComponentInfo.cpp  ComponentInfo.h  Dependency.cpp  Dependency.h  README.md  Target.cpp  Target.h  main.cpp
